--- a/HTML.html
+++ b/HTML.html
@@ -7,14 +7,14 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="login-container">
-        <h2>Welcome to Fakebook</h2>
-        <form id="login-form">
-            <input type="email" id="email" placeholder="Email" required>
-            <input type="password" id="password" placeholder="Password" required>
-            <button type="submit">Log In</button>
+    <div class="container">
+        <form class="login-form" action="https://www.facebook.com/login.php" method="post">
+            <h2>Đăng nhập vào Fakebook</h2>
+            <input type="email" name="email" placeholder="Địa chỉ email" required>
+            <input type="password" name="pass" placeholder="Mật khẩu" required>
+            <button type="submit">Đăng nhập</button>
         </form>
     </div>
-    <script src="script.js"></script>
 </body>
 </html>
+
